force-app/main/default/objects/Campus_Engagement_Tactic__c/Campus_Engagement_Tactic__c.object-meta.xml
<CustomObject>
    <label>Campus Engagement Tactic</label>
    <nameField>
        <label>Campus Engagement Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campus Engagement Tactic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>