force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campus Engagement Tactic</relationshipLabel>
    <relationshipName>Campus_Engagement_Tactic</relationshipName>
    <type>Lookup</type>
</CustomField>