force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Ambassador_Program__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A check in this field means that the customer has an Ambassador Program for SALT.</inlineHelpText>
    <label>Ambassador Program</label>
    <type>Checkbox</type>
</CustomField>