force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Ambassador_Program_Stage__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Program_Stage__c</fullName>
    <label>Ambassador Program Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Program Inquiry</fullName>
            </value>
            <value>
                <fullName>Pending Decision</fullName>
            </value>
            <value>
                <fullName>Recruiting/Planning</fullName>
            </value>
            <value>
                <fullName>Ambassador Training in Progress</fullName>
            </value>
            <value>
                <fullName>Certification in Progress</fullName>
            </value>
            <value>
                <fullName>Active Program</fullName>
            </value>
            <value>
                <fullName>Stagnant Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>