force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Campus_Event_Activations__c.field-meta.xml
<CustomField>
    <fullName>Campus_Event_Activations__c</fullName>
    <label>Campus Event Activations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>