force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Campus_Event_Cost__c.field-meta.xml
<CustomField>
    <fullName>Campus_Event_Cost__c</fullName>
    <label>Campus Event Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>