force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Campus_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Campus_Event_Date__c</fullName>
    <label>Campus Event Date</label>
    <type>Date</type>
</CustomField>