force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Advising</fullName>
            </value>
            <value>
                <fullName>Academic Affairs</fullName>
            </value>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Alumni Relations</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Bursar</fullName>
            </value>
            <value>
                <fullName>Business Office</fullName>
            </value>
            <value>
                <fullName>Campus-Wide</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Enrollment Management</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>First-Year Experience</fullName>
            </value>
            <value>
                <fullName>Institutional Research</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>President&#39;s Office</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>Residence Life</fullName>
            </value>
            <value>
                <fullName>Retention Office</fullName>
            </value>
            <value>
                <fullName>Scholarship Office</fullName>
            </value>
            <value>
                <fullName>Student Activities</fullName>
            </value>
            <value>
                <fullName>Student Affairs</fullName>
            </value>
            <value>
                <fullName>Student Government</fullName>
            </value>
            <value>
                <fullName>Student Leadership Programming</fullName>
            </value>
            <value>
                <fullName>Student Services</fullName>
            </value>
            <value>
                <fullName>TRIO Program</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>