force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Pilot_Program__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a pilot program?</description>
    <inlineHelpText>Is this a pilot program?</inlineHelpText>
    <label>Pilot Program</label>
    <type>Checkbox</type>
</CustomField>