force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Promotional_Asset__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Asset__c</fullName>
    <label>Promotional Asset</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amabassador Handbook</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Buckslip</fullName>
            </value>
            <value>
                <fullName>Bulletin Board Kit</fullName>
            </value>
            <value>
                <fullName>Communication Kit</fullName>
            </value>
            <value>
                <fullName>Digital board presentation</fullName>
            </value>
            <value>
                <fullName>Event Resources</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Guide for Student Organizations</fullName>
            </value>
            <value>
                <fullName>Instructor’s Handbook</fullName>
            </value>
            <value>
                <fullName>Membership Card</fullName>
            </value>
            <value>
                <fullName>Orientation Kit</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>Press Kit</fullName>
            </value>
            <value>
                <fullName>Print Ad</fullName>
            </value>
            <value>
                <fullName>SALT Flyer</fullName>
            </value>
            <value>
                <fullName>SALT Overview Video</fullName>
            </value>
            <value>
                <fullName>Slide Deck</fullName>
            </value>
            <value>
                <fullName>Table Tent</fullName>
            </value>
            <value>
                <fullName>Web Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>