force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultation Call</fullName>
            </value>
            <value>
                <fullName>Stakeholder Meeting</fullName>
            </value>
            <value>
                <fullName>Post-Launch Call</fullName>
            </value>
            <value>
                <fullName>Quarterly Check-In-Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>