force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Tactic_Category__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Category__c</fullName>
    <label>Tactic Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core promotional initiatives</fullName>
            </value>
            <value>
                <fullName>Incorporate SALT into existing campus events/programming</fullName>
            </value>
            <value>
                <fullName>Multi-department engagement plan</fullName>
            </value>
            <value>
                <fullName>Adopted ongoing communication/promotional plan</fullName>
            </value>
            <value>
                <fullName>SALT registration requirement</fullName>
            </value>
            <value>
                <fullName>Utilization of instructor handbook</fullName>
            </value>
            <value>
                <fullName>SALT ambassador program</fullName>
            </value>
            <value>
                <fullName>Integration into the curriculum</fullName>
            </value>
            <value>
                <fullName>SALT steering committee/task force</fullName>
            </value>
            <value>
                <fullName>SALT incentive event/raffle</fullName>
            </value>
            <value>
                <fullName>Top down buy-in (President/C-Suite)</fullName>
            </value>
            <value>
                <fullName>SALT Courses/Lesson requirement</fullName>
            </value>
            <value>
                <fullName>Engagement Meeting</fullName>
            </value>
            <value>
                <fullName>Re-Engagement Meeting</fullName>
            </value>
            <value>
                <fullName>Large-Scale Engagement Initiative</fullName>
            </value>
            <value>
                <fullName>One-on-One Counseling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>