force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Alumni</fullName>
            </value>
            <value>
                <fullName>All Students</fullName>
            </value>
            <value>
                <fullName>Faculty and Administrators</fullName>
            </value>
            <value>
                <fullName>First-Year Student</fullName>
            </value>
            <value>
                <fullName>Graduating Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Student Leaders</fullName>
            </value>
            <value>
                <fullName>TRIO</fullName>
            </value>
            <value>
                <fullName>Young Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>