force-app/main/default/objects/Campus_Engagement_Tactic__c/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <label>Time Frame</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spring 2012</fullName>
            </value>
            <value>
                <fullName>Summer 2012</fullName>
            </value>
            <value>
                <fullName>Fall 2012</fullName>
            </value>
            <value>
                <fullName>Spring 2013</fullName>
            </value>
            <value>
                <fullName>Summer 2013</fullName>
            </value>
            <value>
                <fullName>Fall 2013</fullName>
            </value>
            <value>
                <fullName>Spring 2014</fullName>
            </value>
            <value>
                <fullName>Summer 2014</fullName>
            </value>
            <value>
                <fullName>Fall 2014</fullName>
            </value>
            <value>
                <fullName>Spring 2015</fullName>
            </value>
            <value>
                <fullName>Summer 2015</fullName>
            </value>
            <value>
                <fullName>Fall 2015</fullName>
            </value>
            <value>
                <fullName>Spring 2016</fullName>
            </value>
            <value>
                <fullName>Summer 2016</fullName>
            </value>
            <value>
                <fullName>Fall 2016</fullName>
            </value>
            <value>
                <fullName>Spring 2017</fullName>
            </value>
            <value>
                <fullName>Summer 2017</fullName>
            </value>
            <value>
                <fullName>Fall 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>