force-app/main/default/objects/Campus_Engagement_Tactic__c/recordTypes/campus_engagenement_tactic.recordType-meta.xml
<RecordType>
    <fullName>campus_engagenement_tactic</fullName>
    <active>true</active>
    <label>Campus Engagement Tactic</label>
</RecordType>