force-app/main/default/objects/Campus_Engagement_Tactic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Time_Frame__c</columns>
    <columns>Tactic_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>