force-app/main/default/objects/Campus_Engagement_Tactic__c/listViews/Daryl_Conte.listView-meta.xml
<ListView>
    <fullName>Daryl_Conte</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Time_Frame__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Daryl</value>
    </filters>
    <label>Daryl Conte</label>
</ListView>