force-app/main/default/objects/Campus_Engagement_Tactic__c/listViews/New_View.listView-meta.xml
<ListView>
    <fullName>New_View</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Time_Frame__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>New View</label>
</ListView>